--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
     background-color:#e67e22;
 }
 
-.ui-menu-contact-resume{
+.ui-menu-color-resume{
     background-color:#9b59b6;
 }
 
@@ -72,3 +72,33 @@ header{
     padding: 0;
 }
 
+.menuitem{
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a{
+    width:100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menuitem span{
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
