--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*-------------------Colors*/
+/*------------------------------------------------------------------------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color:#676767;
@@ -22,7 +22,7 @@
     background-color:#525252;
 }
 
-/*-------------------Special paddings/margins.text*/
+/*------------------------------------------------------------------------------------------Special paddings/margins.text*/
 h1, h2, h3, h4{
     margin:0;
 }
@@ -37,7 +37,11 @@ h1, h2, h3, h4{
     text-transform: uppercase;
 }
 
-/*-------------------Heading*/
+.inline-block{
+    display: inline-block;
+}
+
+/*------------------------------------------------------------------------------------------------------------Heading*/
 
 header{
     margin:0;
@@ -123,17 +127,32 @@ header{
     letter-spacing: 2px;
 }
 
-/*-------------------Hover.css*/
+/*--------------------------------------------------------------------------------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before{
 background: rgba(0,0,0,0.2);
 height: 120px;
 }
 
-/*-------------------Footer*/
+/*----------------------------------------------------------------------------------------------------------------------------Footer*/
 
 footer{
     background-color: #525252;
     color: #fafafa;
     min-height: 120px;
+}
+
+.cv-pdf i{
+    font-size: 18px;
+    color: #fafafa;
+    text-align: center;
+    padding-left: 5px;
+    transition:all: 0.35s ease-in-out;
+    -moz-transition:all: 0.35s ease-in-out;
+    -webkit-transition:all: 0.35s ease-in-out;
+    -o-transition:all: 0.35s ease-in-out;
+}
+
+.cv-pdf i:hover{
+    color:#e84610;
 }
