--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,3 +273,7 @@ color: #e67e22;
     color: #fafafa;
     background-color: rgba(25,25,25 0.2);
 }
+
+.progress-section{
+    margin: 40px 20px;
+}
