--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@
     background-color: #f4f4f4;
 }
 
+.bg-color-work-history {
+    background-color:#9b59b6;
+}
+
 .ui-menu-color-home{
     background-color:#e67e22;
 }
@@ -62,6 +66,7 @@ h4{
     float: none;
 }
 
+.history-heading,
 .section-heading{
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -276,4 +281,11 @@ color: #e67e22;
 
 .progress-section{
     margin: 40px 20px;
+}
+
+/*------------------------------------------------------------------------------------------------------------Heading*/
+
+.history-heading {
+color:#fafafa;
+margin-bottom: 50px;
 }
