--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ color: #e67e22;
     margin-bottom: 15px;
 }
 
-/*------------------------------------------------------------------------------------------Personal Info*/
+/*------------------------------------------------------------------------------------------------------------------Personal Info*/
 
 .personal-info-item{
     margin-bottom: 20px;
@@ -289,3 +289,51 @@ color: #e67e22;
 color:#fafafa;
 margin-bottom: 50px;
 }
+
+.timeline-item{
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p{
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after{
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+}
+
+
+
+
+
+
+
+
+
+
+
